# django-idea-analyzer

./: README.md  pyproject.toml
django_idea_analyzer/: __init__.py  main.py  prompts.py
