[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-idea-analyzer"
version = "2025.12.22110310"
description = "django-idea-analyzer provides structured feedback on Django project ideas, assessing feasibility, challenges, and best practices for efficient development evaluation."
readme = "README.md"
authors = [{ name = "django-idea-analyzer", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/django-idea-analyzer"
